[package]
name = "optim_lib-rust"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "number_theory"
path = "number_theory"

[[bin]]
name = "data_structure"
path = "data_structure"

[[bin]]
name = "graph"
path = "graph"

[workspace]
members = [ "number_theory/*", "data_structure/*" , "graph/*" ]
